--- a/index.html
+++ b/index.html
@@ -10,17 +10,21 @@
     <nav>
         <button onclick="Home()">Home</button>
         <button onclick="Informativa()">Informativa</button>
-        <button onclick="Capturados()">Capturados</button>
+        <button onclick="Trivia()">Trivia</button>
         <button onclick="Favoritos()">Favoritos</button>
     </nav>
     <div id="root">
 
     </div>
-<script src="js/capturados.js"></script>
+
 <script src="js/Detalle.js"></script>
 <script src="js/Home.js"></script>
 <script src="js/Favoritos.js"></script>
 <script src="js/Conexion.js"></script>
 <script src="js/Informativa.js"></script>
+<script src="js/Trivia.js"></script>
+<script>
+document.addEventListener("DOMContentLoaded", General);
+</script>
 </body>
 </html>
